--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.2.5",
+    "postcss-preset-env": "^10.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
